unpackaged/main/default/objects/pse__Version__c/pse__Version__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__VersionHelp</customHelpPage>
    <description>A read-only copy of a project used to compare changes against an active project.</description>
    <label>Version</label>
    <nameField>
        <label>Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>