unpackaged/main/default/objects/pse__Version__c/fields/pse__Baseline__c.field-meta.xml
<CustomField>
    <fullName>pse__Baseline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, indicates the version is the baseline for the project.</description>
    <inlineHelpText>Select to identify this version as the baseline. This is the agreed project plan that other versions on this project can be compared against.</inlineHelpText>
    <label>Baseline</label>
    <type>Checkbox</type>
</CustomField>