unpackaged/main/default/objects/pse__Version__c/fields/pse__Batch_Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__Batch_Apex_Job_Id__c</fullName>
    <description>The ID for the Apex job executing the Versioning batch process.</description>
    <inlineHelpText>The ID for the Apex job executing the Versioning batch process.</inlineHelpText>
    <label>Batch Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>