unpackaged/main/default/objects/pse__Version__c/fields/pse__Batch_Process__c.field-meta.xml
<CustomField>
    <fullName>pse__Batch_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related record for the related Versioning batch process.</description>
    <inlineHelpText>The related record for the related Versioning batch process.</inlineHelpText>
    <label>Batch Process</label>
    <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
    <relationshipLabel>Versions</relationshipLabel>
    <relationshipName>Versions</relationshipName>
    <type>Lookup</type>
</CustomField>