unpackaged/main/default/objects/pse__Version__c/fields/pse__Notes__c.field-meta.xml
<CustomField>
    <fullName>pse__Notes__c</fullName>
    <description>Notes related to the version.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>