unpackaged/main/default/objects/pse__Version__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The project related to the version.</description>
    <inlineHelpText>The project related to the version.</inlineHelpText>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Managed Versions</relationshipLabel>
    <relationshipName>Version</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>