unpackaged/main/default/objects/pse__Version__c/validationRules/pse__Cannot_become_baseline_when_deleting.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Cannot_become_baseline_when_deleting</fullName>
    <active>true</active>
    <description>Error message indicating the version cannot be defined as a baseline as it is being deleted.</description>
    <errorConditionFormula>AND( pse__Baseline__c  = true, ISPICKVAL (pse__Status__c, 'Deleting'))</errorConditionFormula>
    <errorMessage>Your selected version is queued for deletion and cannot be set as a baseline.</errorMessage>
</ValidationRule>