unpackaged/main/default/objects/pse__Version__c/validationRules/pse__Version_should_have_a_name.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Version_should_have_a_name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorMessage>Enter a name for this project version.</errorMessage>
</ValidationRule>